pkg/deps/testdata/ub/manifest/invalid/non-string-version.ub
manifest: {
  requires: {
    'github.com/x/y': {
      version: 1
    }
  }
}
